# NumericalMethodsHWs

./: README.md
hw1/: CMakeLists.txt  consecutive.cpp  consecutive.h  main.cpp  parallel.cpp  parallel.h  preset.h  report.md
hw3/: REPORT.md
hw3/src/: main.py
